piszemy aplikację od nowa