@@ -3,19 +3,13 @@ package client.backend;
 import client.backend.models.*;
 import client.backend.models.Calendar;
 import client.backend.models.Card;
-import client.backend.serialization.CalendarIdDeserializer;
-import client.backend.serialization.ColorDeserializer;
-import client.backend.serialization.ColorSerializer;
-import client.backend.serialization.KanbanIdDeserializer;
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
 import com.google.gson.reflect.TypeToken;
-import javafx.scene.paint.Color;
 
 import java.io.BufferedWriter;
 import java.io.File;
 import java.io.IOException;
-import java.lang.reflect.Array;
 import java.lang.reflect.Type;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -28,99 +22,98 @@ import static org.apache.commons.codec.digest.DigestUtils.sha256Hex;
 public class JsonManager {
 
     private final static Path rootDir = Paths.get("").toAbsolutePath();
+    private final static Gson gson = new GsonBuilder().excludeFieldsWithoutExposeAnnotation().setPrettyPrinting().create();
 
     public static String getRootDirectory() {
         return rootDir.toString();
     }
 
-    public static void writeWorkspaceData(Workspace workspace, boolean ifWriteChildren) throws IOException {
-        File workspaceFile = new File(getRootDirectory() + "/workspace/workspace.json");
+    //region READERS
 
-        if(!workspaceFile.getParentFile().exists() && !workspaceFile.getParentFile().mkdirs()) {
-            throw new IOException("Could not create workspace directory - " + workspaceFile.getParentFile().getAbsolutePath());
+    public static Workspace readCompleteWorkspaceData() throws Exception {
+        Workspace workspace = readWorkspaceData();
+
+        for(String calendarId : workspace.getCalendarIds()){
+            workspace.addToCalendars(readCompleteCalendarData(calendarId));
         }
 
-        Gson gson = new GsonBuilder().setPrettyPrinting().excludeFieldsWithoutExposeAnnotation().create();
-
-        String json = gson.toJson(workspace);
-
-        if(!workspaceFile.exists()) {
-            workspaceFile.createNewFile();
-        }
-
-        try (BufferedWriter writer = Files.newBufferedWriter(workspaceFile.toPath())) {
-            writer.write(json);
-            writer.flush();
-        } catch(IOException e) {
-            System.err.println(e.getMessage() + "\nCouldn't write to file " + workspaceFile.getAbsolutePath());
-            e.printStackTrace();
-        }
-
-        if(ifWriteChildren)
-            writeAllCalendarsData(workspace.getCalendars());
+        return workspace;
     }
 
-    public static void writeAllCalendarsData(ArrayList<Calendar> calendars) throws IOException {
-        File calendarsFile = new File(rootDir.toString() + "/workspace/calendars.json");
+    public static Calendar readCompleteCalendarData(String calendarId) throws Exception {
+        Calendar calendar = readCalendarStructureData(calendarId).orElseThrow();
+        ArrayList<Card> orphanCards = readOrphanCards(calendarId);
+        ArrayList<KanbanBoard> boards = readKanbanBoardsData(calendarId);
+        ArrayList<Card> kanbanCards = readAllKanbanCardsData(calendarId);
 
-        if(!calendarsFile.getParentFile().exists() && !calendarsFile.getParentFile().mkdirs()) {
-            throw new IOException("Unable to create directory " + calendarsFile.getParentFile().getAbsolutePath());
+        // Add cards to kanban boards
+        for (KanbanBoard board : boards) {
+            board.getItemIds().forEach((columnKey, cardIds) -> {
+                board.addToItemsList(columnKey, (ArrayList<Card>) kanbanCards.stream()
+                        .filter(card -> cardIds.contains(card.getId()))
+                        .collect(Collectors.toCollection(ArrayList::new)));
+            });
         }
 
-        Gson gson = new GsonBuilder().excludeFieldsWithoutExposeAnnotation().setPrettyPrinting().create();
-
-        String json = gson.toJson(calendars);
-
-        if (!calendarsFile.exists()) {
-            calendarsFile.createNewFile();
-        }
-
-        try (BufferedWriter writer = Files.newBufferedWriter(calendarsFile.toPath())) {
-            writer.write(json);
-            writer.flush();
-        } catch (IOException e) {
-            System.err.println(e.getMessage() + "\nCouldn't write to file " + calendarsFile.getAbsolutePath());
-            e.printStackTrace();
-        }
-
-        for(Calendar calendar : calendars) {
-            JsonManager.writeSingleCalendarData(calendar);
-        }
+        calendar.setKanbanBoards(boards);
+        calendar.setOrphanCards(orphanCards);
+        return calendar;
     }
 
-    private static void writeSingleCalendarData(Calendar calendar) throws IOException{
-        File currentFile = new File(rootDir.toString() + "/workspace/calendar-" + calendar.getID() + "/boards.json");
-        if(!currentFile.getParentFile().exists() && !currentFile.getParentFile().mkdirs()) {
-            throw new IOException("Unable to create directory " + currentFile.getParentFile().getAbsolutePath());
+    // This has: id, kanbanIds, memberIds, workspaceId
+    public static Optional<Calendar> readCalendarStructureData(String calendarID) throws IOException {
+        File file = new File(rootDir + "/workspace/calendar-" + calendarID + "/calendar.json");
+
+        if (!file.getParentFile().exists() && !file.getParentFile().mkdirs()) {
+            throw new IOException("Unable to create directory" + file.getParentFile().getAbsolutePath());
         }
 
-        if(!currentFile.exists()) currentFile.createNewFile();
-
-        Gson gson = new GsonBuilder().setPrettyPrinting().excludeFieldsWithoutExposeAnnotation().registerTypeAdapter(Color.class, new ColorSerializer()).create();
-
-        try(BufferedWriter writer = Files.newBufferedWriter(currentFile.toPath())) {
-            writer.write(gson.toJson(calendar.getKanbanBoards()));
-            writer.flush();
+        if (!file.exists()) {
+            return Optional.empty();
         }
 
-        currentFile = new File(currentFile.getParent() + "/cards.json");
-        try(BufferedWriter writer = Files.newBufferedWriter(currentFile.toPath())) {
-            writer.write(gson.toJson(calendar.getOrphanCards()));
-            writer.flush();
-        }
+        String json = Files.readString(file.toPath());
+
+        return Optional.of(gson.fromJson(json, Calendar.class));
     }
 
-    /*
-    workspace
-    |_workspace.json
-    |_calendars.json
-    |_foldery...
-     */
+    public static ArrayList<Card> readAllKanbanCardsData(String calendarId) throws IOException {
+        File cardsFile = new File(rootDir + "/workspace/calendar-" + calendarId + "/cards.json");
 
-    public static Workspace readWorkspaceData() throws IOException {
+        if (!cardsFile.getParentFile().mkdirs() && !cardsFile.exists()) {
+            throw new IOException("Unable to create directory " + cardsFile.getParentFile().getAbsolutePath());
+        }
+
+        String cardsJson = Files.readString(cardsFile.toPath());
+        Type cardArrayType = new TypeToken<ArrayList<Card>>() {
+        }.getType();
+        return gson.fromJson(cardsJson, cardArrayType);
+        // sex
+    }
+
+    public static ArrayList<Card> readOrphanCards(String calendarID) throws IOException {
+        File file = new File(rootDir + "/workspace/calendar-" + calendarID + "/orphans.json");
+
+        if (!file.getParentFile().exists() && !file.getParentFile().mkdirs()) {
+            throw new IOException("Unable to create directory " + file.getParentFile().getAbsolutePath());
+        }
+
+        if (!file.exists()) {
+            file.createNewFile();
+            return new ArrayList<Card>();
+        }
+
+        String json = Files.readString(file.toPath());
+        Type type = new TypeToken<ArrayList<Card>>() {
+        }.getType();
+
+        return gson.fromJson(json, type);
+    }
+
+    private static Workspace readWorkspaceData() throws IOException {
         File file = new File(rootDir.toString() + "/workspace/workspace.json");
 
-        if(!file.getParentFile().exists() && !file.getParentFile().mkdirs()) {
+        if (!file.getParentFile().exists() && !file.getParentFile().mkdirs()) {
             throw new IOException("Unable to create directory " + file.getParentFile().getAbsolutePath());
         }
 
@@ -129,122 +122,131 @@ public class JsonManager {
             return Workspace.DEFAULT;
         }
 
-        String jsonString = new String(Files.readAllBytes(file.toPath()));
-        Gson gson = new GsonBuilder().excludeFieldsWithoutExposeAnnotation().setPrettyPrinting().create();
-        Workspace workspace = gson.fromJson(jsonString, Workspace.class);
-        workspace.setCalendars(readAllCalendars());
+        String jsonString = Files.readString(file.toPath());
 
-        return workspace;
+        return gson.fromJson(jsonString, Workspace.class);
     }
 
-    public static ArrayList<Calendar> readAllCalendars() throws IOException {
-        ArrayList<Calendar> calendars = JsonManager.readAllCalendarsIdData();
 
-        if (calendars.isEmpty()) {
-            return calendars;
-        }
+    private static ArrayList<KanbanBoard> readKanbanBoardsData(String calendarId) throws IOException {
 
-        for (Calendar calendar : calendars) {
-            ArrayList<KanbanBoard> allBoards = JsonManager.readAllKanbanBoardsData(calendar);
-            ArrayList<Card> allCards = JsonManager.readAllCardsData(calendar);
-
-            for (int i = 0; i < calendar.getKanbanBoards().size(); i++) {
-                KanbanBoard emptyBoard = calendar.getKanbanBoards().get(i);
-                String boardId = emptyBoard.getId();
-
-                calendar.setKanbanBoard(allBoards.stream().filter(newBoard -> newBoard.getId().equals(boardId)).findFirst().get(),
-                                        i);
-                KanbanBoard newBoard = calendar.getKanbanBoards().get(i);
-                newBoard.setCalendar(calendar);
-
-                HashMap<String, ArrayList<Card>> itemHashmap = new HashMap<>();
-
-                newBoard.getItemIds().forEach((columnTitle, itemIdList) -> {
-                    ArrayList<Card> itemList = allCards.stream()
-                            .filter(card -> itemIdList.contains(card.getId()))
-                            .collect(Collectors.toCollection(ArrayList::new));
-                    itemHashmap.put(columnTitle, itemList);
-                });
-
-                newBoard.setItemsLists(itemHashmap);
-            }
-
-            for (int i = 0; i < calendar.getOrphanCards().size(); i++) {
-                Card card = calendar.getOrphanCards().get(i);
-                String cardId = card.getId();
-                calendar.setOrphanCard(allCards.stream().filter(newCard -> newCard.getId().equals(cardId)).findFirst().get(),
-                                        i);
-            }
-        }
-
-        return calendars;
-    }
-
-    private static ArrayList<Calendar> readAllCalendarsIdData() throws IOException {
-        File calendarsFile = new File(rootDir + "/workspace/calendars.json");
-
-        /*
-        if(!calendarsFile.getParentFile().mkdirs()) {
-            throw new IOException("Unable to create directory " + calendarsFile.getParentFile().getAbsolutePath());
-        }
-        */
-
-        if (!calendarsFile.exists()) {
-            return new ArrayList<Calendar>();
-        }
-
-        String calJson = new String(Files.readAllBytes(calendarsFile.toPath()));
-        System.out.println("readAllCalendarsData -> calJson:" + calJson);
-
-        Type calendarArrayType = new TypeToken<ArrayList<Calendar>>() {}.getType();
-        Gson gson = new GsonBuilder().registerTypeAdapter(Calendar.class, new CalendarIdDeserializer()).create();
-
-        return gson.fromJson(calJson, calendarArrayType);
-        // sex
-    }
-
-    private static ArrayList<KanbanBoard> readAllKanbanBoardsData(Calendar calendar) throws IOException {
-
-        File boardsFile = new File(rootDir + "/workspace/calendar-" + calendar.getID() + "/boards.json");
-
-        /*
-        if(!boardsFile.getParentFile().mkdirs()) {
-            throw new IOException("Unable to create directory " + boardsFile.getParentFile().getAbsolutePath());
-        }
-        */
+        File boardsFile = new File(rootDir + "/workspace/calendar-" + calendarId + "/boards.json");
 
         if (!boardsFile.exists()) {
-            return new ArrayList<KanbanBoard>();
+            return new ArrayList<>();
         }
 
-        String boardsJson = new String(Files.readAllBytes(boardsFile.toPath()));
+        String boardsJson = Files.readString(boardsFile.toPath());
 
         if (boardsJson.isEmpty()) {
             return new ArrayList<>();
         }
 
-        Type boardArrayType = new TypeToken<ArrayList<KanbanBoard>>() {}.getType();
-        Gson gson = new GsonBuilder().create();
+        Type boardArrayType = new TypeToken<ArrayList<KanbanBoard>>() {
+        }.getType();
 
         return gson.fromJson(boardsJson, boardArrayType);
     }
 
-    private static ArrayList<Card> readAllCardsData(Calendar calendar) throws IOException {
-        File cardsFile = new File(rootDir + "/workspace/calendar-" + calendar.getID() + "/cards.json");
-        if(!cardsFile.getParentFile().mkdirs() && !cardsFile.exists()) {
-            throw new IOException("Unable to create directory " + cardsFile.getParentFile().getAbsolutePath());
-        }
-        String cardsJson = new String(Files.readAllBytes(cardsFile.toPath()));
+    //endregion
+    //region WRITERS
 
-        Type cardArrayType = new TypeToken<ArrayList<Card>>() {}.getType();
-        Gson gson = new GsonBuilder().registerTypeAdapter(Color.class, new ColorDeserializer()).create();
-        return gson.fromJson(cardsJson, cardArrayType);
+    public static void writeALLdata(Workspace workspace) throws IOException {
+        writeWorkspaceData(workspace);
+
+        for(Calendar calendar : workspace.getCalendars()) {
+            writeCalendarData(calendar);
+            writeOrphanCards(calendar.getOrphanCards(), calendar.getID());
+            writeKanbanBoards(calendar.getKanbanBoards(), calendar.getID());
+
+            for (KanbanBoard board : calendar.getKanbanBoards()) {
+                writeKanbanCards(board.getItems(), calendar.getID());
+            }
+        }
     }
 
+    public static void writeWorkspaceData(Workspace workspace) throws IOException {
+        File workspaceFile = new File(getRootDirectory() + "/workspace/workspace.json");
 
+        if (!workspaceFile.getParentFile().exists() && !workspaceFile.getParentFile().mkdirs()) {
+            throw new IOException("Could not create workspace directory - " + workspaceFile.getParentFile().getAbsolutePath());
+        }
 
+        for(String calendarId : workspace.getCalendarIds()) {
+            File calendarDir = new File(rootDir + "/workspace/calendar-" + calendarId + "/");
+            calendarDir.mkdirs();
+        }
 
-    public static void main(String[] args) throws IOException{
+        String json = gson.toJson(workspace);
+
+        if (!workspaceFile.exists()) {
+            workspaceFile.createNewFile();
+        }
+
+        try (BufferedWriter writer = Files.newBufferedWriter(workspaceFile.toPath())) {
+            writer.write(json);
+            writer.flush();
+        } catch (IOException e) {
+            System.err.println(e.getMessage() + "\nCouldn't write to file " + workspaceFile.getAbsolutePath());
+            e.printStackTrace();
+        }
+    }
+
+    public static void writeCalendarData(Calendar calendar) throws IOException {
+        File calendarFile = new File(rootDir + "/workspace/calendar-" + calendar.getID() + "/calendar.json");
+
+        if (!calendarFile.exists()) {
+            calendarFile.createNewFile();
+        }
+
+        try (BufferedWriter writer = Files.newBufferedWriter(calendarFile.toPath())) {
+            writer.write(gson.toJson(calendar));
+            writer.flush();
+        }
+    }
+
+    public static void writeKanbanBoards(ArrayList<KanbanBoard> boards, String calendarId) throws IOException {
+        File kanbanFile = new File(rootDir + "/workspace/calendar-" + calendarId + "/boards.json");
+
+        if (!kanbanFile.exists()) {
+            kanbanFile.createNewFile();
+        }
+
+        try (BufferedWriter writer = Files.newBufferedWriter(kanbanFile.toPath())) {
+            writer.write(gson.toJson(boards));
+            writer.flush();
+        }
+    }
+
+    public static void writeKanbanCards(ArrayList<Card> cards, String calendarId) throws IOException {
+        File cardsFile = new File(rootDir + "/workspace/calendar-" + calendarId + "/cards.json");
+
+        if (!cardsFile.exists()) {
+            cardsFile.createNewFile();
+        }
+
+        try (BufferedWriter writer = Files.newBufferedWriter(cardsFile.toPath())) {
+            writer.write(gson.toJson(cards));
+            writer.flush();
+        }
+    }
+
+    public static void writeOrphanCards(ArrayList<Card> cards, String calendarId) throws IOException {
+        File orphanFile = new File(rootDir + "/workspace/calendar-" + calendarId + "/orphans.json");
+
+        if (!orphanFile.exists()) {
+            orphanFile.createNewFile();
+        }
+
+        try (BufferedWriter writer = Files.newBufferedWriter(orphanFile.toPath())) {
+            writer.write(gson.toJson(cards));
+            writer.flush();
+        }
+    }
+
+    //endregion
+
+    public static void main(String[] args) throws IOException {
         ArrayList<Card> cards = new ArrayList<>(List.of(
                 new Card("Card 1", "Desc", getRandomDateWithin7Days(-1), getRandomDateWithin7Days(1)),
                 new Card("Card 2", "Desc", getRandomDateWithin7Days(-1), getRandomDateWithin7Days(1)),
@@ -275,7 +277,7 @@ public class JsonManager {
         workspace.setCalendars(calendars);
         boards.get(0).setCalendar(calendars.get(0));
 
-        writeWorkspaceData(workspace, false);
+        writeWorkspaceData(workspace);
     }
 
     static Date getRandomDateWithin7Days(long multiplier) {
@@ -297,19 +299,3 @@ public class JsonManager {
         return calendar.getTime();
     }
 }
-
-
-
-/*
-./workspace
-|_calendars.json
-|_calendarID_1
-| |_boards.json
-| |_cards.json
-| |_other files i.e. multimedia
-|_calendarID_2
-| |_...
-|_...
-
-
- */
